--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family Album</title>
-    <link rel="stylesheet" href="style.css">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Family Album</title>
+		<link rel="stylesheet" href="./css/style.css">
+		<script type="module" src="js/app.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Family Album</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+		<header>
+				<h1>Welcome to the Family Album</h1>
+				<nav>
+						<button class="menu-toggle" id="menuBtn">☰</button>
+						<ul id="menuList">
+							<li><a href="#">Главная</a></li>
+							<li><a href="#">Галерея</a></li>
+							<li><a href="#">Загрузка</a></li>
+							<li><a href="#">про нас</a></li>
+						</ul>
+				</nav>
+		</header>
 </body>
 </html>
