--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
 				<h1>Welcome to the Family Album</h1>
 				<nav>
 						<button class="menu-toggle" id="menuBtn">☰</button>
-						<ul id="menuList">
+						<ul class="nav-menu" id="menuList">
 							<li><a href="#">Главная</a></li>
 							<li><a href="#">Галерея</a></li>
-							<li><a href="#">Загрузка</a></li>
+							<li><a href="#" data-section="upload">Загрузка</a></li>
 							<li><a href="#">про нас</a></li>
 						</ul>
 				</nav>
 		</header>
+		<section id="upload" class="upload-section" style="display: none;">
+			<form id="upload-form">
+				<label for="photo-input" class="upload-label">
+					<span class="upload-icon">📷</span>
+					<input type="file" id="photo-input" accept="image/*" multiple>
+				</label>
+				<button type="submit" class="upload-btn	">Завантажити</button>
+				<div class="drop-zone">
+					<p>Перетягни фото сюди</p>
+				</div>
+			</form>
+		</section>
 </body>
 </html>
